fix: fixed activities page before element visiblity

--- a/src/components/Activities/ActivityGroup/activityGroup.module.css
+++ b/src/components/Activities/ActivityGroup/activityGroup.module.css
@@ -3,26 +3,28 @@
   gap: clamp(2.5rem, 4vi, 4rem);
 
   position: relative;
+}
 
-  &::before {
-    display: none;
-    content: "";
-    position: absolute;
-
-    top: -2rem;
-    bottom: -4rem;
-    width: 1rem;
-
-    background-color: #a4d4ff;
-    border-radius: 1rem;
-
-    left: 50%;
-    translate: -50%;
-
-    @media (min-width: 48rem) {
-      display: block;
-    }
+@media (min-width: 48rem) {
+  .activity-group::before {
+    display: block;
   }
+}
+
+.activity-group::before {
+  display: none;
+  content: "";
+  position: absolute;
+
+  top: -2rem;
+  bottom: -4rem;
+  width: 1rem;
+
+  background-color: #a4d4ff;
+  border-radius: 1rem;
+
+  left: 50%;
+  translate: -50%;
 }
 
 .sticky {
